# Neurabox

./: LICENSE.md  README.md  go.mod  go.sum  nb-policy.yaml  package.json
.github/workflows/: build-context.yml  build.yaml  npm-publish.yaml  release.yaml
cmd/nb/: main.go
internal/: neurabox_context.spec  neuragraph_ast.py  pyproject.toml
internal/assets/: assests.go
internal/neuragraph/: build.py  builder.go  cache.py  dedup.py  detect.py  extract.py  google_workspace.py  mcp_ingest.py  neurabox_context.spec  neuragraph.spec  neuragraph_ast.spec  security.py  validate.py
internal/neuragraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
internal/policy/: policy.go
internal/rtk/: setup.go
internal/sandbox/: ai.go  audit.go  docker.go  primitive_linux.go  primitive_mac.go  primitive_windows.go  revert.go  sync.go
internal/session/: context.go  session.go
internal/telemetry/: telemetry.go
internal/types/: AuditTypes.go
npm/: package.json  postinstall.js
