[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuragraph"
version = "0.8.27"
description = "Neurabox structural context engine - turn any folder of code into an AST knowledge graph"
# 🛡️ Commented out to prevent setuptools validation crashes:
# readme = "README.md"
# license = { file = "LICENSE" }
keywords = ["neurabox", "knowledge-graph", "ast", "tree-sitter", "llm-context"]
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "datasketch",
    "rapidfuzz",
    "tree-sitter>=0.23.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-groovy",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-powershell",
    "tree-sitter-elixir",
    "tree-sitter-objc",
    "tree-sitter-julia",
    "tree-sitter-verilog",
    "tree-sitter-fortran",
    "tree-sitter-bash",
    "tree-sitter-json",
    "tree-sitter-dm",
]

[project.scripts]
# Updates the command line entry point mapping
neuragraph = "neuragraph.__main__:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "build>=1.5.0",
    "hypothesis>=6.152.7",
    "nuitka>=4.1",
    "patchelf>=0.17.2.4 ; sys_platform != 'win32'",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pyinstaller>=6.20.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "safety>=3.7.0",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]

[tool.uv]
# 🚀 Fixed: Changed to false to prevent strict editable-build validation crashes
package = false

[tool.setuptools]
# Configured to look for the renamed folder module
packages = ["neuragraph"]
include-package-data = false

[tool.setuptools.package-data]
neuragraph = [
    "skill.md", "skill-codex.md", "skill-opencode.md", "skill-aider.md", 
    "skill-amp.md", "skill-copilot.md", "skill-claw.md", "skill-windows.md", 
    "skill-droid.md", "skill-trae.md", "skill-kiro.md", "skill-vscode.md", 
    "skill-pi.md", "skill-devin.md"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "neuragraph-benchmark", "neuragraph_eval", "neuragraph_test",
    "worked", "llm-stack-corpus", "llm-stack-demo", "product-site",
    "scripts", "ebook", ".github", "dist", "build",
]

[tool.bandit]
skips = ["B404"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pyright]
include = ["neuragraph", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
